# goit-python-web-HW04

./: Dockerfile  README.md  main.py  pyproject.toml
storage/: data.json
